2007-07-02  Bastien Nocera  <hadess@hadess.net>

	* configure.in: No need to check open-obex, we don't use it here
	(Closes: #441032)

2007-01-23  David Lodge <dave@cirt.net>

	* configure.in: Added en_GB to ALL_LINGUAS

2006-12-14  Pema Geyleg  <pgeyleg@gmail.com>

	* configure.in: Added 'dz' to ALL_LINGUAS

2006-11-01  Dan Winship  <danw@novell.com>

	* configure.in: Run configure checks under gcc, not g++ (#368920)

2006-10-19  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>

	* configure.in: Added "ca" (Catalan) to ALL_LINGUAS.

============ Version 0.8

2006-09-18  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.8

2006-08-25  Hendrik Richter  <hrichter@gnome.org>

	* configure.in: Added "de" to ALL_LINGUAS.

2006-08-22  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/e-contact-entry.c: Patch from Ed Catmur <ed@catmur.co.uk>
	to make c-l-a compile with newer versions of e-d-s (Closes: #349726)

2006-05-11  Bastien Nocera  <hadess@hadess.net>

	* src/icon.c: (load_icon): Try to load icons in both the program's
	datadir, and the pixmaps dir
	* ui/Makefile.am: install cellphone.png in both $(datadir)/pixmaps
	and $(datadir)/gnome-phone-manager (Closes: #341385)

============ Version 0.7

2006-05-05  Bastien Nocera  <hadess@hadess.net>

	* configure.in: version 0.7
	* src/ui.c: (dequeue_message): some build fixes, and made the code
	more glib-y
	* NEWS: upd

2006-05-03  Ilkka Tuohela  <hile@iki.fi>

	* configure.in: Added "fi" to ALL_LINGUAS

2006-04-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO.
	* po/nb.po: Updated Norwegian bokmål translation.
	* po/no.po: Remove the old one.

2006-03-31  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* libgsm/gnokii-identify.c: (tell_driver):
	* libgsm/phonemgr-listener.c: (phonemgr_listener_connect),
	(phonemgr_listener_disconnect), (phonemgr_listener_queue_message),
	(phonemgr_listener_poll_real):
	* libgsm/phonemgr-listener.h: